# avatar_archived

./: .gitignore  CHANGELOG.md  README.md  SETUP_GUIDE.md  app.py  pyproject.toml  requirements.txt  run_gui.sh
.github/: pull_request_template.md
scripts/: auto_version.py
src/gui/: __init__.py  main.py
src/gui/v5/: __init__.py  backend.py  main.qml
src/gui/v5/layouts/: GridLayout.qml  SingleColumnLayout.qml  ThreeColumnLayout.qml  TwoColumnLayout.qml  TwoRowLayout.qml  qmldir
src/gui/v5/modules/brainwave/: qmldir  view.qml
src/gui/v5/modules/brainwave-visualization/: qmldir  view.qml
src/gui/v5/modules/brainwave-visualization/components/: DatasetSelector.qml  GraphGrid.qml
src/gui/v5/modules/brainwave-visualization/plotscode/: controller.R
src/gui/v5/modules/brainwave/components/: ConsoleLog.qml  ControlPanel.qml  FlightLog.qml  PredictionsTable.qml
src/gui/v5/modules/developers/: qmldir  view.qml
src/gui/v5/modules/developers/components/: DevLog.qml  MedalDisplay.qml  TicketLog.qml  TierChart.qml  TierPanel.qml
src/gui/v5/modules/developers/functions/: __init__.py  dev_charts.py
src/gui/v5/modules/drone/: qmldir  view.qml
src/gui/v5/modules/drone/components/: ConsoleLogger.qml  ControlPanel.qml  FlightLog.qml
src/gui/v5/modules/file-shuffler/: qmldir  view.qml
src/gui/v5/modules/file-shuffler/components/: ActionButtons.qml  OutputDisplay.qml  StatusIndicators.qml
src/gui/v5/modules/nao/: qmldir  view.qml
src/gui/v5/modules/nao/components/: ConnectionCard.qml  ConsoleLogger.qml  LeftPanel.qml  View3D.qml
src/gui/v5/modules/transfer-data/: qmldir  view.qml
src/gui/v5/modules/transfer-data/components/: ConnectionForm.qml  ControlButtons.qml  DirectorySelector.qml
src/gui/v5/modules/transfer-data/functions/: __init__.py
src/hardware/: __init__.py
src/hardware/bci/: __init__.py
src/hardware/drone/: __init__.py
src/hardware/drone/camera/: CameraView.qml  camera_controller.py
src/hardware/nao/: __init__.py  nao_connection.py  nao_service.py  quick_setup.md  start_nao_service.sh
src/hardware/nao/age/: nao_speak_age.py
src/hardware/nao/standup_sitdown/: nao_controller.py
src/kafka-cluster/: KAFKA-CLUSTER.md
src/ml/models/deep-learning/JAX/: deep_learning_jax.ipynb  deep_learning_jax.py
src/ml/models/deep-learning/tensorflow/: Deep_learning_model_Conv1D.ipynb
src/ml/models/random-forest/JAX/: jax_random_forest.ipynb  jax_random_forest.py
src/ml/models/random-forest/pytorch/: custom_rf.ipynb
src/ml/models/random-forest/tensorflow/: GUI.py
src/ml/models/random-forest/tensorflow/client/: brainflow1.py
src/ml/models/random-forest/tensorflow/gui_windows/: __init__.py  brainwave_prediction_window.py  manual_drone_control_window.py  transfer_files_window.py
src/ml/models/random-forest/tensorflow/prediction_server/server/: server.py
src/ml/preprocessings/file-shuffler/utilities/: label_counter.py
tests/: __init__.py  test_sample.py
