[tool.poetry]
name = "avatar-forked"
version = "0.1.0"
description = "Avatar BCI Project - Brain-Computer Interface with Python & ML"
authors = ["Florentino Garcia <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# --- Core frameworks ---
PySide6 = "6.9.2"
PySide6_Addons = "6.9.2"
PySide6_Essentials = "6.9.2"
shiboken6 = "6.9.2"

# --- BCI and Hardware ---
brainflow = "5.18.1"
djitellopy = "2.5.0"
av = "15.1.0"
opencv-python = "4.12.0.88"

# --- Machine Learning ---
scikit-learn = "1.7.2"
scipy = "1.15.3"
numpy = "2.2.6"
pandas = "2.3.2"
joblib = "1.5.2"
threadpoolctl = "3.6.0"

# --- Visualization ---
matplotlib = "3.10.7"
contourpy = "1.3.3"
cycler = "0.12.1"
fonttools = "4.60.1"
kiwisolver = "1.4.9"
pyparsing = "3.2.5"

# --- Image Processing ---
pillow = "11.3.0"
pdf2image = "1.17.0"

# --- HTTP and Networking ---
requests = "2.32.5"
urllib3 = "2.5.0"
certifi = "2025.10.5"
charset-normalizer = "3.4.4"
idna = "3.11"

# --- Security and Authentication ---
bcrypt = "4.2.0"
cryptography = "43.0.1"
paramiko = "3.5.0"
pysftp = "0.2.9"
PyNaCl = "1.5.0"
cffi = "1.17.1"
pycparser = "2.22"

# --- Utilities ---
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
tzdata = "2025.2"
pytz-deprecation-shim = "0.1.0.post0"
six = "1.17.0"
packaging = "25.0"

# --- Data Science ---
rpy2 = "3.5.12"

# --- Template Engine ---
Jinja2 = "3.1.4"
MarkupSafe = "3.0.2"

# --- Build Tools ---
setuptools = "80.9.0"

# --- Legacy Qt (optional) ---
PyQt5 = { version = "5.15.11", optional = true }
PyQt5-Qt5 = { version = "5.15.17", optional = true }
PyQt5_sip = { version = "12.16.1", optional = true }

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "7.0.0"
click = "8.1.8"
colorama = "0.4.6"
mypy-extensions = "1.0.0"
pathspec = "0.12.1"
platformdirs = "4.3.6"
tomli = "2.2.1"
typing_extensions = "4.12.2"
GitPython = "3.1.43"
semantic-version = "2.10.0"
types-paramiko = "^3.5.0"
pandas-stubs = "^2.2.0"
types-requests = "^2.32.0"
types-pysftp = "^0.2.0"
mypy = "^1.10.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"



[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "paramiko.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "PyQt5.*",
    "cv2",
    "torch",
    "deepface",
    "facenet_pytorch",
    "rpy2.*",
    "PySimpleGUI",
    "numpy",
    "brainflow.*",
    "naoqi",
    "git",
    "semantic_version",
    "tensorflow",
    "tensorflow_decision_forests",
    "jax.*",
    "flax.*",
    "optax",
    "matplotlib.*",
    "djitellopy",
    "filedate",
    "schedule",
    "pdf2image",
    "sftp",
    "flask",
    "pandas",
    "pandas.*",
    "requests",
    "requests.*",
    "pysftp",
    "pysftp.*",
    "gui.*",
    "hardware.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--ignore-glob=Legacy*",
    "--ignore=venv",
    "--ignore=.venv",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
